# feos-torch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
feos_torch/: __init__.py  dual.py  dual_torch.py  gc_pcsaft.py  pcsaft.py  pcsaft_mix.py  pcsaft_pure.py
src/: gc_pcsaft.rs  lib.rs  pcsaft.rs
tests/: sauer2014_hetero.json  test_dual.py  test_dual_torch.py  test_gc_pcsaft.py  test_pcsaft.py  test_pcsaft_mix.py  test_pcsaft_pure.py
