[package]
name = "feos-torch"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "FeOs-torch - Automatic differentiation of phase equilibria."
repository = "https://github.com/feos-org/feos-torch"
keywords = ["physics", "thermodynamics", "equations_of_state", "phase_equilibria"]
categories = ["science"]

[lib]
name = "feos_torch"
crate-type = ["cdylib"]

[dependencies]
feos = { version = "0.6", features = ["pcsaft", "gc_pcsaft"] }
ndarray = { version = "0.15", features = ["rayon"] }
pyo3 = { version = "0.21", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.21"

[profile.release-lto]
inherits = "release"
lto = true
